<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.restaurantappcustom.Inicio.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_main_dishes"
        android:name="com.example.restaurantappcustom.Inicio.ui.main_dishes.MainDishesFragment"
        android:label="@string/main_dishes"
        tools:layout="@layout/fragment_main_dishes" />

    <fragment
        android:id="@+id/nav_reportes"
        android:name="com.example.restaurantappcustom.Inicio.ui.reportes.ReportesFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_reportes" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.restaurantappcustom.Inicio.ui.history.HistoryFragment"
        android:label="@string/main_history"
        tools:layout="@layout/fragment_history" />
</navigation>